--- a/less/common.less
+++ b/less/common.less
@@ -264,7 +264,8 @@ header{
 			}*/
 		}
 		@media @below600{
-			padding-top:6%;
+			padding-top:0;
+			padding-left:0;
 			.navbar-header{
 				margin-top: 5%;
 				/*width:100%;*/
