--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -270,7 +270,8 @@ header .navbar .navbar-right .fin-dropdown.open a span.down {
 }
 @media only screen and (max-width:600px) {
   header .navbar {
-    padding-top: 6%;
+    padding-top: 0;
+    padding-left: 0;
   }
   header .navbar .navbar-header {
     margin-top: 5%;
